--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     # nginx
     nginx-service:
         image: nginx:stable-alpine
-        container_name: nginx-container
+        container_name: nginx
         ports:
-            - "8080:80"
+            - "8000:80"
         volumes:
             - ../project_api_symfony:/var/www/project_api_symfony
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
@@ -25,7 +25,7 @@ services:
         build:
             context: .
             dockerfile: ./php/Dockerfile
-        container_name: php74-container
+        container_name: php74
         ports:
             - "9000:9000"
         volumes:
@@ -36,23 +36,25 @@ services:
     # mysql
     mysql8-service:
         image: mysql:8
-        container_name: mysql8-container
+        container_name: mysql
+        tty: true
         ports:
-            - "4306:3306"
+            - '3306:3306'
         volumes:
-            - ./mysql:/var/lib/mysql
+            - './mysql:/var/lib/mysql'
+            - './mysql:/docker-entrypoint-initdb.d'
         command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
         restart: always # always restart unless stopped manually
         environment:
-            MYSQL_ROOT_PASSWORD: secret
-            MYSQL_PASSWORD: secret
+            MYSQL_ROOT_PASSWORD: 'secret'
+            MYSQL_PASSWORD: 'secret'
         networks:
             - nginx-php74-mysql8-node
 
     # node
     node-service:
         image: node:latest
-        container_name: node-container
+        container_name: node
         volumes:
             - ../project_api_symfony:/var/www/project_api_symfony
         working_dir: /var/www/project
