add initial structure

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -41,7 +41,7 @@ services:
         ports:
             - '3306:3306'
         volumes:
-            - './mysql:/var/lib/mysql'
+            - './ead_mysql:/var/lib/mysql'
             - './mysql:/docker-entrypoint-initdb.d'
         command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
         restart: always # always restart unless stopped manually
